<resources>
    <string name="app_name">Todo App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage_your_tasks">Manage your tasks</string>
    <string name="stay_organized_and_keep_track_of_what_matters">Stay organized and keep track of what        matters.</string>
    <string name="get_started">Get Started</string>
    <string name="floating_action_edit_button">Floating Action Edit Button</string>
    <string name="tasks_list">Tasks List</string>
    <string name="title">Title</string>
    <string name="discription">Discription</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="completed">Completed</string>
    <string name="delete_icon">delete Icon</string>
    <string name="favourite_tasks">Favourite Tasks</string>
    <string name="todo_app">ToDo App</string>
    <string name="add_todo">Add ToDo</string>
    <string name="learn_room_database">Learn Room Database</string>
    <string name="study_entity_dao_and_database">Study Entity, DAO and Database</string>
    <string name="favourite">Favourite</string>
    <string name="title_on_favourite">title</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="description">description</string>
    <string name="favbutton">favButton</string>
    <string name="description_required">Description is required</string>
    <string name="title_required">Title is required</string>
    <string name="update_task">Update Task</string>
    <string name="update">Update</string>
    <string name="no_tasks_yet">No tasks yet</string>
    <string name="no_tasks_yet_click_on_fab_to_add">No tasks yet.Click on FAB to Add</string>
    <string name="no_tasks_favourite_yet">No Tasks Favourite Yet</string>

</resources>